# testcudf

./: CMakeLists.txt  README.md  advanced_optimization_test.cpp  coalesce_comparison.cpp  coalesce_strategy_test.cpp.backup  coalesce_test.cpp  concat_optimization_test.cpp  conditional_coalesce_test.cpp  memory_leak_test.cpp  memory_requirement_test.cpp  multithread_scalability.cpp  multithreaded_test.cpp  optimized_coalesce_cast_test.cpp  optimized_impl_test.cpp  plot_100cols.py  plot_cast_coalesce.py  plot_comparison_multi.py  plot_conditional.py  plot_results.py  plot_results_pool.py  rmm_pool_test.cpp  split_copy_test.cpp  virtual_column_test.cpp
optimizations/: CMakeLists.txt  MULTITHREAD_RESULTS.md  README.md  build.sh  kernel_submission_test.cpp  multithread_benchmark.cpp  run_benchmarks.sh  setup_env.sh  thread_count_test.cpp  workload1_benchmark.cpp  workload2_benchmark.cpp
optimizations/memory_pool_compare/: CMakeLists.txt  README.md  build.sh  memory_resource_test.cpp
optimizations/memory_pool_compare/async_scenarios/: ASYNC_ADVANTAGES.md  ASYNC_SUMMARY.md  CMakeLists.txt  EXTREME_FRAGMENTATION_FINDINGS.md  FRAGMENTATION_FINDINGS.md  MULTITHREAD_FRAGMENTATION_FINDINGS.md  README.md  async_advantage_test.cpp  build.sh  extreme_fragmentation_test.cpp  fragmentation_performance_test.cpp  fragmentation_test.cpp  multithread_fragmentation_test.cpp  simple_fragmentation_test.cpp
optimizations/mutex_first_test/: CMakeLists.txt  README.md  build.sh  original_arena_test.cpp  original_async_test.cpp  original_with_mutex_test.cpp  run_all.sh
optimizations/mutex_first_test/nsys_profiling/: CMakeLists.txt  README.md  WORKLOAD1_RESULTS.md  concurrent_mode.cpp  mutex_mode.cpp  profile.sh
optimizations/mutex_first_test/nsys_profiling/nsys_reports/: concurrent_mode.nsys-rep  mutex_mode.nsys-rep
optimizations/mutex_first_test/nsys_profiling_async/: .gitignore  CMakeLists.txt  README.md  WORKLOAD1_RESULTS.md  build.sh  concurrent_mode.cpp  mutex_mode.cpp  profile.sh
optimizations/mutex_first_test/nsys_profiling_async/nsys_reports/: concurrent_mode.nsys-rep  mutex_mode.nsys-rep
